chore: added the readme and updated the analysis options and changelog

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,9 @@
 name: flutter_form_validators
 description: "A new Flutter package project."
-version: 0.0.1
-homepage: 
+version: 1.0.0
+homepage: https://github.com/jocypher/flutter_form_validators
+repository: https://github.com/jocypher/flutter_form_validators
+issue_tracker: https://github.com/jocypher/flutter_form_validators/issues 
 
 environment:
   sdk: ">=3.4.0 <4.0.0"
