--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,7 +1,18 @@
 include: package:flutter_lints/flutter.yaml
 analyzer:
+  exclude:
+    - "**/*.g.dart"
   errors:
     file_names: ignore
 
+
+linter:
+  rules:
+    - always_declare_return_types
+    - avoid_empty_else
+    - cancel_subscriptions
+    - close_sinks
+    - prefer_final_fields
+    - prefer_final_locals
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
