--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_form_validators
+name: form_validators_plus
 description: A flexible Flutter and Dart validation library with ready-to-use rules and utilities
 version: 1.0.0
 homepage: https://github.com/jocypher/flutter_form_validators
